fix: harden flocking detection and make alert thresholds relative